added all products and starting feature page, not sure why theres a white space separating components though

--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,8 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Kanit:wght@900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;900&display=swap"
       rel="stylesheet"
     />
     <title>Lucky Start</title>
